# KiForge

./: .gitignore  README.md  pyproject.toml
examples/: test_chip.csv
kiforge/: __init__.py  __main__.py
kiforge/cli/: __init__.py  main.py
kiforge/core/: __init__.py
kiforge/core/footprint/: __init__.py  generator.py  qfn.py  qfp.py
kiforge/core/model3d/: __init__.py
kiforge/core/models/: __init__.py  component.py  enums.py  footprint.py  package.py  pin.py
kiforge/core/parser/: __init__.py  csv_parser.py  fpga_csv_parser.py  inference.py
kiforge/core/symbol/: __init__.py  generator.py
tests/: __init__.py  test_footprint.py  test_models.py  test_parser.py  test_symbol.py
