[project]
name = "kiforge"
version = "0.1.0"
description = "Automatic KiCad component generator from datasheets"
readme = "README.md"
license = "GPL-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Ka-zam" }
]
keywords = ["kicad", "eda", "electronics", "pcb", "schematic", "footprint"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "pandas>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
parser = [
    "docling>=2.0",
]
model3d = [
    "cadquery>=2.4",
]
gui = [
    "PyQt6>=6.5",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
all = [
    "kiforge[parser,model3d,gui,dev]",
]

[project.scripts]
kiforge = "kiforge.cli.main:app"

[project.urls]
Homepage = "https://github.com/Ka-zam/KiForge"
Repository = "https://github.com/Ka-zam/KiForge"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["kiforge*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
